readme file updated with wireframe, index page changed text

--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@
     <div class="container">
       <section class="intro-box">
         <h1><em>Welcome to my personal website</em></h1>
-        <p class="text-center">I'm a career switcher with a strong passion for <em>web development and coding</em>.</p>
-        <p class="text-center">I'm actively looking for a junior developer role to grow my career in tech.</p>
+        <p class="text-center">Purpose of this website is to showcase my skills so far in web development aswell as draw attention to potential hirers in <strong>Tech/Software</strong>in the hope of being hired.</p>
       </section>
 
       <section class="skills-box">
@@ -69,7 +68,7 @@
       <section class="resume-box">
         <h1><em>CV</em></h1>
         <div class="text-center">
-          <a href="assets/assets/css/assets/css/MODEL CV.pdf" target="_blank">
+          <a href="assets/assets/css/" target="_blank">
             <h3>Click to View CV</h3>
           </a>
         </div>
