--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <section class="resume-box">
         <h1><em>CV</em></h1>
         <div class="text-center">
-          <a href="assets/assets/css/" target="_blank">
+          <a href="assets/assets/css/JM%20Web%20Development%20CV%20.pdf" target="_blank">
             <h3>Click to View CV</h3>
           </a>
         </div>
