text changes on index page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <div class="container">
       <section class="intro-box">
         <h1><em>Welcome to my personal website</em></h1>
-        <p class="text-center">Purpose of this website is to showcase my skills so far in web development aswell as draw attention to potential hirers in <strong>Tech/Software</strong>in the hope of being hired.</p>
+        <p class="text-center">Purpose of this website is to showcase my skills so far in web development aswell as draw attention to potential hirers in <strong>Tech/Software</strong> with the hope of being hired.</p>
       </section>
 
       <section class="skills-box">
