projects image changed for error html code on validator

--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@
 
     <div class="header-content text-center py-4">
       <h1 class="mb-3">Projects</h1>
-      <img src="assets/assets/css/coding project image.jpeg" class="header-photo" alt="Open MacBook Pro displaying a code editor with colorful syntax highlighting, positioned on a dark desk next to a small stack of books and pencils. Soft natural light and plant shadows fall across a plain wall, creating a calm and focused workspace. No visible text in the environment except for code on the laptop screen." width="240" height="240">
+      <img src="assets/assets/css/coding-project-image.jpeg" class="header-photo" alt="Open MacBook Pro displaying a code editor with colorful syntax highlighting, positioned on a dark desk next to a small stack of books and pencils. Soft natural light and plant shadows fall across a plain wall, creating a calm and focused workspace. No visible text in the environment except for code on the laptop screen." width="240" height="240">
       </div>
       </header>
 
