--- a/contact.html
+++ b/contact.html
@@ -62,8 +62,26 @@
     <div class="container">
     <section class="about-me-box">
     <div class="text-center my-4">
-    <img src="assets/assets/css/phone-icon-design_23-2151311652.avif" class="rounded mx-auto d-block" alt="Stylized phone icon with a classic handset shape centered on a plain white background, representing communication and contact in a simple and neutral tone" width="240" height="240">
-    <a href="jermaine.mckenna_@outlook.com" class="btn btn primary">Email Me</a>
+    <h2 class="mb-4">Contact Me</h2>
+    <form>
+    
+    <div clsss="mb-4">
+    <label for="name" class="form-label">Your Name</label>
+    <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
+    </div>
+
+    <div class="mb-4">
+    <label for="email" class="form-label">Your Email</label>
+    <input type="email" class="form-control" id="email" placeholder="enter your email address" required>
+    </div>
+
+    <div class="mb-4">
+    <label for="message" class="form-label">Your Message</label>
+    <textarea class="form-control" id="message" rows="5" placeholder="Write your message here" required></textarea>
+    </div>
+     
+    <button type="submit" class="btn btn-primary">Send Message</button>
+    </form>
     </div>
     </section>
 
