home page header photo dimensions altered

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
     <div class="header-content text-center py-4">
       <h1 class="mb-3">Jermaine McKenna | Junior Full-Stack Software Developer</h1>
-      <img src="assets/assets/css/1A18EB05-7B19-461A-B5FC-4FD6474C684C.jpeg" class="header-photo" alt="Young man in a light-colored suit and blue graduation gown standing outdoors on a paved road, holding a graduation cap and certificate, with modern building and greenery in the background, conveying a sense of achievement and celebration" width="240" height="240">
-        </div>
-  </header>
+    <img src="assets/assets/css/1A18EB05-7B19-461A-B5FC-4FD6474C684C.jpeg" class="header-photo" alt="A young man stands outdoors wearing a light-colored suit, blue tie, and blue graduation gown, holding a graduation cap and certificate in one hand. He stands confidently on a paved road with greenery, trees, and a modern glass building in the background. The scene conveys a sense of pride and accomplishment." style="max-width: 250px; height: auto;">
+      </div>
+    </header>
 
   <!-- Main Content -->
   <main class="main-content">
