--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
     <h2 class="mb-4">Contact Me</h2>
     <form>
     
-    <div clsss="mb-4">
+    <div class="mb-4">
     <label for="name" class="form-label">Your Name</label>
     <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
     </div>
