--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  
+  <!--Title-->
   <title>JermaineMcKenna | Junior Full-Stack Developer</title>
 
   <!-- Favicon -->
@@ -81,6 +84,9 @@
     </div>
      
     <button type="submit" class="btn btn-primary">Send Message</button>
+    <form action="thankyou.html" method="post">
+
+    </form>
     </form>
     </div>
     </section>
