--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  
+  <!--Responsive Tag-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
   <!--Title-->
   <title>JermaineMcKenna | Junior Full-Stack Developer</title>
 
