--- a/projects.html
+++ b/projects.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  
+  <!--Responsive Tag-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!--Title-->
