changes made to contact/index/thank you pages

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  
+
   <!--Responsive Tag-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -64,7 +64,7 @@
 
       <section class="about-me-box">
         <h2><em>About Me</em></h2>
-      <p class="text-center">Hello, I'm Jermaine McKenna, a career switcher from doing Drainage & operating heavy machinery in constructuion & railway, to now junior full-stack web developer with a strong commitment to progressing in the world of software development.  </p>
+      <p class="text-center">Hello, I'm Jermaine McKenna, a career switcher from doing Drainage & operating heavy machinery in construction & railway, to now junior full-stack web developer with a strong commitment to progressing in the world of software development.  </p>
       </section>
 
       <section class="resume-box">
