--- a/thankyou.html
+++ b/thankyou.html
@@ -21,8 +21,10 @@
 
 </head>
 <body>
+    <div style="text-align:center;">
     <h1>Thank You!</h1>
     <p>Your message has been sent succesfully.</p>
     <p><a href="index.html" class="btn btn-primary">Return to home</a></p>
+    </div>
 </body>
 </html>
