cv deleted and readded to make it viewable on page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <section class="resume-box">
         <h2><em>CV</em></h2>
         <div class="text-center">
-          <a href="assets/assets/css/JM%20Web%20Development%20CV%20.pdf" target="_blank">
+          <a href="assets/assets/css/JM Web Development CV .pdf" target="_blank">
             <h3>Click to View CV</h3>
           </a>
         </div>
