details updated on projects/coming soon page

--- a/assets/assets/css/coming-soon.html
+++ b/assets/assets/css/coming-soon.html
@@ -25,7 +25,7 @@
 <body>
     <div style="text-align:center;">
     <h1>Site Coming Soon</h1>
-    <p><a href="index.html" class="btn btn-primary">Return to home</a></p>
+    <p>Thank you for your patience</p>
     </div>
 </body>
 </html>
