--- a/projects.html
+++ b/projects.html
@@ -52,21 +52,21 @@
       <section class="intro-box">
       <div class="text-center my-4">
       <h2 class="text-center">IronBaseBuilders | Project</h2>
-      <a href="coming-soon.html" class="btn btn-primary">View Site</a>
+      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary">View Site</a>
       </div>
       </section>
        
       <section class="skills-box">
       <div class="text-center my-4">
       <h2 class="text-center">JM Views | Project</h2>
-      <a href="coming-soon.html" class="btn btn-primary">View Site</a>
+      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary">View Site</a>
       </div>
       </section>
 
       <section class="resume-box">
       <div class="text-center my-4">
       <h2 class="text-center">RJ Luxury Rentals | Project</h2>
-      <a href="coming-soon.html" class="btn btn-primary">View Site</a>
+      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary">View Site</a>
       </div>
       </section>
  </main>
