updated index cta button & CV button to make interactive

--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
       <p class="text-center">Hello, I'm Jermaine McKenna, a career switcher from doing Drainage & operating heavy machinery in construction & railway, to now junior full-stack web developer with a strong commitment to progressing in the world of software development.  </p>
       </section>
 
-      <section class="resume-box">
-        <h2><em>CV</em></h2>
-        <div class="text-center">
-          <a href="assets/assets/css/newcv..pdf" target="blank">
-            <h3>Click to View CV</h3>
-          </a>
-        </div>
+      <section class="resume-box py-5">
+      <div class="container text-center">
+      <h2 class="mb-4"><em>CV</em></h2>
+      <a href="assets/assets/css/newcv..pdf" target="_blank" class="cta-button">
+      <i class="bi bi-file-earmark-text">Click to View CV</i>
+      </a>
+      </div>
       </section>
 
       <!-- Call to Action -->
