projects link made blank to open a new tab

--- a/projects.html
+++ b/projects.html
@@ -53,14 +53,14 @@
       <section class="intro-box">
       <div class="text-center my-4">
       <h2 class="text-center">IronBaseBuilders | Project</h2>
-      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary">View Site</a>
+      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary" target="_blank">View Site</a>
       </div>
       </section>
        
       <section class="skills-box">
       <div class="text-center my-4">
       <h2 class="text-center">JM Views | Project</h2>
-      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary">View Site</a>
+      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary" target="blank">View Site</a>
       </div>
     </section>
 
@@ -68,7 +68,7 @@
       <section class="resume-box">
       <div class="text-center my-4">
       <h2 class="text-center">RJ Luxury Rentals | Project</h2>
-      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary">View Site</a>
+      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary" target="blank">View Site</a>
       </div>
       </div>
     </section>
