images put into assets/css path and updated on all files and css and text changed to files

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 
     <div class="text-center py-4">
     <h1 class="contact-title">Jermaine McKenna | Contact Me</h1>
-    <img src="assets/assets/css/pexels-mohammad-danish-290641-891059.jpg" class="rounded mx-auto d-block" alt="Person typing on a laptop at a desk with a notebook and coffee cup nearby in a bright workspace, focused and calm atmosphere" width="240" height="240">
+    <img src="assets/assets/css/assets/contactpagedp.jpg" class="rounded mx-auto d-block" alt="Person typing on a laptop at a desk with a notebook and coffee cup nearby in a bright workspace, focused and calm atmosphere" width="240" height="240">
     </div>
    </header>
 
@@ -50,16 +50,16 @@
     <div class="container">
     <section class="intro-box">
     <div class="text-center my-4">
-    <img src="assets/assets/css/images.png" class="rounded mx-auto d-block" alt="LinkedIn logo featuring the word Linked in bold black letters followed by the letters in in white inside a blue rounded square on a plain white background, representing a professional and modern business networking platform, neutral and businesslike tone" width="240" height="240">
-    <a href="https://www.linkedin.com/in/jermaine-mckenna" class="btn btn-primary">Connect LinkedIn</a>
+    <img src="assets/assets/css/assets/linkedinlogo.png" class="rounded mx-auto d-block" alt="LinkedIn logo featuring the word Linked in bold black letters followed by the letters in in white inside a blue rounded square on a plain white background, representing a professional and modern business networking platform, neutral and businesslike tone" width="240" height="240">
+    <a href="https://www.linkedin.com/in/jermaine-mckenna" class="btn btn-primary" target="blank">Connect LinkedIn</a>
     </div>
     </section>
 
     <div class="container">
     <section class="skills-box">
     <div class="text-center my-4">
-    <img src="assets/assets/css/github-mark.png" class="rounded mx-auto d-block" alt="git hub logo">
-    <a href="https://www.github.com/JermaineMcKenna" class="btn btn-primary">View GitHub</a>
+    <img src="assets/assets/css/assets/githublogo.png" class="rounded mx-auto d-block" alt="git hub logo">
+    <a href="https://www.github.com/JermaineMcKenna" class="btn btn-primary" target="blank">View GitHub</a>
     </div>
     </section>
 
@@ -67,7 +67,7 @@
    <section class="about-me-box">
     <div class="text-center my-4">
     <h2 class="mb-4">Contact Me</h2>
-    <form action="thankyou.html" method="get">
+    <form action="thankyou.html" method="get" target="blank">
       <div class="mb-4">
         <label for="name" class="form-label">Your Name</label>
         <input type="text" class="form-control" id="name" placeholder="Enter your full name" required>
