--- a/coming-soon.html
+++ b/coming-soon.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!--Meta Tag-->
+
   <meta charset="UTF-8" />
 
   <!--Responsive Tag-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!--Title-->
-  <title>Coming Soon</title>
+  <title>JermaineMcKenna | Junior Full-Stack Developer</title>
 
   <!-- Favicon -->
   <link rel="icon" href="assets/css/favicon/tools-and-utensils.png" type="image/png" />
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="assets/assets/css/style.css" />
+  <link rel="stylesheet" href="assets/assets/css/style.css"/>
 
   <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-
+   
 </head>
-
-
 <body>
-    <div style="text-align:center;">
-    <h1>Site Coming Soon</h1>
-    <p>Thank you for your patience</p>
+    <div>
+        <h1 class="text-center">Site Coming Soon</h1>
+        <p class="text-center">Thank you for your patience</p>
     </div>
 </body>
 </html>
