--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="icon" href="assets/css/favicon/tools-and-utensils.png" type="image/png" />
 
   <!-- Custom Styles -->
-  <link rel="stylesheet" href="assets/assets/css/style.css" />
+  <link rel="stylesheet" href="assets/assets/css/style.css"/>
 
   <!-- Bootstrap CSS -->
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -41,7 +41,7 @@
 
     <div class="header-content text-center py-4">
       <h1 class="mb-3">Jermaine McKenna | Junior Full-Stack Software Developer</h1>
-    <img src="assets/assets/css/1A18EB05-7B19-461A-B5FC-4FD6474C684C.jpeg" class="header-photo" alt="A young man stands outdoors wearing a light-colored suit, blue tie, and blue graduation gown, holding a graduation cap and certificate in one hand. He stands confidently on a paved road with greenery, trees, and a modern glass building in the background. The scene conveys a sense of pride and accomplishment." style="max-width: 250px; height: auto;">
+    <img src="assets/assets/css/assets/homepagedp.jpeg" class="header-photo" alt="A young man stands outdoors wearing a light-colored suit, blue tie, and blue graduation gown, holding a graduation cap and certificate in one hand. He stands confidently on a paved road with greenery, trees, and a modern glass building in the background. The scene conveys a sense of pride and accomplishment." style="max-width: 250px; height: auto;">
       </div>
     </header>
 
@@ -70,7 +70,7 @@
       <section class="resume-box py-5">
       <div class="container text-center">
       <h2 class="mb-4"><em>CV</em></h2>
-      <a href="assets/assets/css/newcv..pdf" target="_blank" class="cta-button">
+      <a href="assets/assets/css/assets/newcv..pdf" target="_blank" class="cta-button">
       <i class="bi bi-file-earmark-text">Click to View CV</i>
       </a>
       </div>
