--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 
     <div class="header-content text-center py-4">
       <h1 class="mb-3">Projects</h1>
-      <img src="assets/assets/css/coding-project-image.jpeg" class="header-photo" alt="Open MacBook Pro displaying a code editor with colorful syntax highlighting, positioned on a dark desk next to a small stack of books and pencils. Soft natural light and plant shadows fall across a plain wall, creating a calm and focused workspace. No visible text in the environment except for code on the laptop screen." width="240" height="240">
+      <img src="assets/assets/css/assets/projectpagedp.jpeg" class="header-photo" alt="Open MacBook Pro displaying a code editor with colorful syntax highlighting, positioned on a dark desk next to a small stack of books and pencils. Soft natural light and plant shadows fall across a plain wall, creating a calm and focused workspace. No visible text in the environment except for code on the laptop screen." width="240" height="240">
       </div>
       </header>
 
@@ -53,14 +53,14 @@
       <section class="intro-box">
       <div class="text-center my-4">
       <h2 class="text-center">IronBaseBuilders | Project</h2>
-      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary" target="_blank">View Site</a>
+      <a href="coming-soon.html" class="btn btn-primary" target="_blank">View Site</a>
       </div>
       </section>
        
       <section class="skills-box">
       <div class="text-center my-4">
       <h2 class="text-center">JM Views | Project</h2>
-      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary" target="blank">View Site</a>
+      <a href="coming-soon.html" class="btn btn-primary" target="blank">View Site</a>
       </div>
     </section>
 
@@ -68,10 +68,11 @@
       <section class="resume-box">
       <div class="text-center my-4">
       <h2 class="text-center">RJ Luxury Rentals | Project</h2>
-      <a href="assets/assets/css/coming-soon.html" class="btn btn-primary" target="blank">View Site</a>
-      </div>
+      <a href="coming-soon.html" class="btn btn-primary" target="blank">View Site</a>
       </div>
     </section>
+
+    </div>
  </main>
 
   <!--Footer-->
