favicon updated for webpage & readme evidence updated

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>JermaineMcKenna | Junior Full-Stack Developer</title>
 
   <!-- Favicon -->
-  <link rel="icon" href="assets/css/favicon/tools-and-utensils.png" type="image/png" />
+  <link rel="icon" type="image/png" href="assets/assets/css/assets/favicon/pagefavicon.png" />
 
   <!-- Custom Styles -->
   <link rel="stylesheet" href="assets/assets/css/style.css"/>
